test/sema/negative/repeated_definite_array_expr03.impala
fn main() -> int {
    let x: [int*2] = [0, ..3];
    x(0)
}
