test/sema/negative/repeated_definite_array_expr03.out
repeated_definite_array_expr03.impala:2 col 22 - 29: error: mismatched types: expected '[i32 * 2]' but found '[i32 * 3]' as initialization type
